--- a/lab3/requirements.txt
+++ b/lab3/requirements.txt
@@ -1,92 +1,43 @@
-appnope==0.1.0
 astroid==2.4.2
-attrs==19.3.0
-backcall==0.2.0
-bleach==3.1.5
-certifi==2020.6.20
-chardet==3.0.4
+autopep8==1.5.3
 click==7.1.2
-cycler==0.10.0
-decorator==4.4.2
-defusedxml==0.6.0
-dominate==2.5.1
-entrypoints==0.3
-env==0.1.0
+flake8==3.8.3
 Flask==1.1.2
-Flask-Bootstrap==3.3.7.1
+flask-heroku==0.1.9
 Flask-SQLAlchemy==2.4.3
-gunicorn==20.0.4
-idna==2.10
+Flask-WTF==0.14.3
 importlib-metadata==1.7.0
-ipykernel==5.3.0
-ipython==7.16.1
-ipython-genutils==0.2.0
-ipywidgets==7.5.1
 isort==4.3.21
 itsdangerous==1.1.0
 jedi==0.17.1
 Jinja2==2.11.2
-joblib==0.15.1
-jsonschema==3.2.0
-jupyter==1.0.0
-jupyter-client==6.1.5
-jupyter-console==6.1.0
-jupyter-core==4.6.3
-kiwisolver==1.2.0
 lazy-object-proxy==1.4.3
 MarkupSafe==1.1.1
-matplotlib==3.2.2
 mccabe==0.6.1
-mistune==0.8.4
-mypy==0.782
-mypy-extensions==0.4.3
-nbconvert==5.6.1
-nbformat==5.0.7
-notebook==6.0.3
-numpy==1.19.0
-packaging==20.4
-panda==0.3.1
-pandas==1.0.5
-pandocfilters==1.4.2
+modules==1.0.0
+names==0.3.0
 parso==0.7.0
-pexpect==4.8.0
-pickleshare==0.7.5
-prometheus-client==0.8.0
-prompt-toolkit==3.0.5
-ptyprocess==0.6.0
-Pygments==2.6.1
+pluggy==0.13.1
+psycopg2==2.8.5
+psycopg2-binary==2.8.5
+pycodestyle==2.6.0
+pydocstyle==5.0.2
+pyflakes==2.2.0
 pylint==2.5.3
 pylint-flask==0.6
 pylint-flask-sqlalchemy==0.2.0
 pylint-plugin-utils==0.6
-pyparsing==2.4.7
-pyrsistent==0.16.0
-python-dateutil==2.8.1
-pytz==2020.1
-pyzmq==19.0.1
-qtconsole==4.7.5
-QtPy==1.9.0
-requests==2.24.0
-scikit-learn==0.23.1
-scipy==1.5.0
-Send2Trash==1.5.0
+python-jsonrpc-server==0.3.4
+python-language-server==0.34.1
+rope==0.17.0
 six==1.15.0
-sklearn==0.0
+snowballstemmer==2.0.0
 SQLAlchemy==1.3.18
-terminado==0.8.3
-testpath==0.4.4
-threadpoolctl==2.1.0
 toml==0.10.1
-tornado==6.0.4
-traitlets==4.3.3
 typed-ast==1.4.1
-typing-extensions==3.7.4.2
-urllib3==1.25.9
-virtualenv==16.6.1
-visitor==0.1.3
-wcwidth==0.2.5
-webencodings==0.5.1
+ujson==1.35
 Werkzeug==1.0.1
-widgetsnbextension==3.5.1
 wrapt==1.12.1
+WTForms==2.3.1
+yapf==0.30.0
 zipp==3.1.0
