--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,14 @@
 astroid==2.4.2
 autopep8==1.5.3
 click==7.1.2
+dominate==2.5.1
 flake8==3.8.3
 Flask==1.1.2
+Flask-Bootstrap==3.3.7.1
 flask-heroku==0.1.9
 Flask-SQLAlchemy==2.4.3
 Flask-WTF==0.14.3
+gunicorn==20.0.4
 importlib-metadata==1.7.0
 isort==4.3.21
 itsdangerous==1.1.0
@@ -36,6 +39,7 @@ SQLAlchemy==1.3.18
 toml==0.10.1
 typed-ast==1.4.1
 ujson==1.35
+visitor==0.1.3
 Werkzeug==1.0.1
 wrapt==1.12.1
 WTForms==2.3.1
