--- a/requirements.txt
+++ b/requirements.txt
@@ -1,52 +1,37 @@
 astroid==2.4.2
 autopep8==1.5.3
 click==7.1.2
-dominate==2.5.1
 flake8==3.8.3
 Flask==1.1.2
-Flask-Bootstrap==3.3.7.1
 flask-heroku==0.1.9
-Flask-SQLAlchemy==2.4.3
+Flask-SQLAlchemy==2.4.4
 Flask-WTF==0.14.3
-gunicorn==20.0.4
-importlib-metadata==1.7.0
 isort==4.3.21
 itsdangerous==1.1.0
-jedi==0.17.1
+jedi==0.17.2
 Jinja2==2.11.2
 lazy-object-proxy==1.4.3
 MarkupSafe==1.1.1
 mccabe==0.6.1
-modules==1.0.0
-names==0.3.0
-numpy==1.19.0
-pandas==1.0.5
 parso==0.7.0
+passlib==1.7.2
 pluggy==0.13.1
+protobuf==3.12.1
 psycopg2==2.8.5
-psycopg2-binary==2.8.5
 pycodestyle==2.6.0
 pydocstyle==5.0.2
 pyflakes==2.2.0
 pylint==2.5.3
-pylint-flask==0.6
-pylint-flask-sqlalchemy==0.2.0
-pylint-plugin-utils==0.6
-python-dateutil==2.8.1
 python-dotenv==0.14.0
 python-jsonrpc-server==0.3.4
 python-language-server==0.34.1
-pytz==2020.1
 rope==0.17.0
-six==1.15.0
+six==1.14.0
 snowballstemmer==2.0.0
 SQLAlchemy==1.3.18
 toml==0.10.1
-typed-ast==1.4.1
 ujson==1.35
-visitor==0.1.3
 Werkzeug==1.0.1
 wrapt==1.12.1
 WTForms==2.3.1
 yapf==0.30.0
-zipp==3.1.0
