--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ Flask==1.1.2
 flask-heroku==0.1.9
 Flask-SQLAlchemy==2.4.4
 Flask-WTF==0.14.3
+gunicorn==20.0.4
 isort==4.3.21
 itsdangerous==1.1.0
 jedi==0.17.2
